# 42_PythonPiscine

./: README.md
module00/: main00.py
module00/ex0/: ft_hello_garden.py
module00/ex1/: ft_plot_area.py
module00/ex2/: ft_harvest_total.py
module00/ex3/: ft_plant_age.py
module00/ex4/: ft_water_reminder.py
module00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
module00/ex6/: ft_garden_summary.py
module00/ex7/: ft_seed_inventory.py
module01/: module01_subject.txt
module01/ex0/: ft_garden_intro.py
module01/ex1/: ft_garden_data.py
module01/ex2/: ft_plant_growth.py
module01/ex3/: ft_plant_factory.py
module01/ex4/: correction.py  ft_garden_security.py
module01/ex5/: ft_plant_types.py
module01/ex6/: ft_garden_analytics.py  test.py
module02/ex0/: ft_first_exception.py
module02/ex1/: ft_different_errors.py
module02/ex2/: ft_custom_errors.py
module02/ex3/: ft_finally_block.py
module02/ex4/: ft_raise_errors.py
module02/ex5/: ft_garden_management.py
module03/ex0/: ft_command_quest.py
module03/ex1/: ft_score_analytics.py
module03/ex2/: ft_coordinate_system.py
module03/ex3/: ft_achievement_tracker.py
module03/ex4/: ft_inventory_system.py
module03/ex5/: ft_data_stream.py
module03/ex6/: ft_analytics_dashboard.py
module04/: new_discovery.txt
module04/data-generator-tools/: sample_data.json
module05/: main.py
module05/ex01/: data_stream.py
module06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
module08/ex1/: ft_operator.py  pyproject.toml  requirements.txt
(+69 files in other folders)
