[tool.poetry]
name = "matrix-operator"
version = "0.1.0"
description = "Data analysis tool for the resistance"
authors = ["anais", "anais also"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
numpy = "^1.26.4"
requests = "^2.31.0"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"